[uss_qualifier] Rename crdb/cochroachdb to datastore

--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -184,4 +184,4 @@ v1:
         pass_condition:
           elements:
             count:
-              equal_to: 4 # 4 CRDBAccess scenarios are skipped
+              equal_to: 4 # 4 DatastoreAccess scenarios are skipped
