--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_19.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_19.yaml
@@ -7,7 +7,7 @@ resources:
   mock_uss_sp: resources.interuss.mock_uss.client.MockUSSResource?
   evaluation_configuration: resources.netrid.EvaluationConfigurationResource
   dss_instances: resources.astm.f3411.DSSInstancesResource
-  dss_crdb_cluster: resources.interuss.crdb.CockroachDBClusterResource?
+  dss_datastore_cluster: resources.interuss.datastore.DatastoreDBClusterResource?
   utm_client_identity: resources.communications.ClientIdentityResource
   id_generator: resources.interuss.IDGeneratorResource
   service_area: resources.netrid.ServiceAreaResource
@@ -51,7 +51,7 @@ actions:
       generator_type: action_generators.astm.f3411.ForEachDSS
       resources:
         dss_instances: dss_instances
-        dss_crdb_cluster: dss_crdb_cluster?
+        dss_datastore_cluster: dss_datastore_cluster?
         utm_client_identity: utm_client_identity
         id_generator: id_generator
         service_area: service_area
@@ -64,7 +64,7 @@ actions:
             resources:
               dss: dss
               all_dss_instances: dss_instances
-              dss_crdb_cluster: dss_crdb_cluster?
+              dss_datastore_cluster: dss_datastore_cluster?
               utm_client_identity: utm_client_identity
               id_generator: id_generator
               isa: service_area
