--- a/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
+++ b/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
@@ -3,7 +3,7 @@ resources:
   f3411v19_dss_instances: resources.astm.f3411.DSSInstancesResource?
   f3411v22a_dss_instances: resources.astm.f3411.DSSInstancesResource?
   f3548v21_dss_instances: resources.astm.f3548.v21.dss.DSSInstancesResource?
-  dss_crdb_cluster: resources.interuss.crdb.CockroachDBClusterResource?
+  dss_datastore_cluster: resources.interuss.datastore.DatastoreDBClusterResource?
 
   utm_client_identity: resources.communications.ClientIdentityResource
   id_generator: resources.interuss.IDGeneratorResource
@@ -21,7 +21,7 @@ actions:
       generator_type: action_generators.astm.f3548.ForEachDSS
       resources:
         dss_instances: f3548v21_dss_instances
-        dss_crdb_cluster: dss_crdb_cluster?
+        dss_datastore_cluster: dss_datastore_cluster?
         second_utm_auth: second_utm_auth?
         utm_client_identity: utm_client_identity
         flight_intents: flight_intents
@@ -38,7 +38,7 @@ actions:
               second_utm_auth: second_utm_auth?
               utm_client_identity: utm_client_identity
               all_dss_instances: dss_instances
-              dss_crdb_cluster: dss_crdb_cluster?
+              dss_datastore_cluster: dss_datastore_cluster?
               flight_intents: flight_intents
               id_generator: id_generator
               planning_area: planning_area
@@ -52,7 +52,7 @@ actions:
       generator_type: action_generators.astm.f3411.ForEachDSS
       resources:
         dss_instances: f3411v19_dss_instances
-        dss_crdb_cluster: dss_crdb_cluster?
+        dss_datastore_cluster: dss_datastore_cluster?
         utm_client_identity: utm_client_identity
         id_generator: id_generator
         service_area: service_area
@@ -65,7 +65,7 @@ actions:
             resources:
               dss: dss
               all_dss_instances: dss_instances
-              dss_crdb_cluster: dss_crdb_cluster?
+              dss_datastore_cluster: dss_datastore_cluster?
               utm_client_identity: utm_client_identity
               id_generator: id_generator
               isa: service_area
@@ -79,7 +79,7 @@ actions:
       generator_type: action_generators.astm.f3411.ForEachDSS
       resources:
         dss_instances: f3411v22a_dss_instances
-        dss_crdb_cluster: dss_crdb_cluster?
+        dss_datastore_cluster: dss_datastore_cluster?
         utm_client_identity: utm_client_identity
         id_generator: id_generator
         service_area: service_area
@@ -92,7 +92,7 @@ actions:
             resources:
               dss: dss
               all_dss_instances: dss_instances
-              dss_crdb_cluster: dss_crdb_cluster?
+              dss_datastore_cluster: dss_datastore_cluster?
               utm_client_identity: utm_client_identity
               id_generator: id_generator
               isa: service_area
