--- a/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
@@ -11,7 +11,7 @@ resources:
   mock_uss: resources.interuss.mock_uss.client.MockUSSResource?
   dss: resources.astm.f3548.v21.DSSInstanceResource
   dss_instances: resources.astm.f3548.v21.DSSInstancesResource?
-  dss_crdb_cluster: resources.interuss.crdb.CockroachDBClusterResource?
+  dss_datastore_cluster: resources.interuss.datastore.DatastoreDBClusterResource?
   id_generator: resources.interuss.IDGeneratorResource
   utm_client_identity: resources.communications.ClientIdentityResource
   utm_auth: resources.communications.AuthAdapterResource?
@@ -35,7 +35,7 @@ actions:
       mock_uss: mock_uss
       dss: dss
       dss_instances: dss_instances
-      dss_crdb_cluster: dss_crdb_cluster?
+      dss_datastore_cluster: dss_datastore_cluster?
       id_generator: id_generator
       utm_client_identity: utm_client_identity
       utm_auth: utm_auth?
