--- a/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
@@ -64,4 +64,4 @@ v1:
         pass_condition:
           elements:
             count:
-              equal_to: 6 # 6 CRDBAccess scenarios are skipped
+              equal_to: 6 # 6 DatastoreAccess scenarios are skipped
