--- a/monitoring/uss_qualifier/configurations/dev/minimal_probing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/minimal_probing.yaml
@@ -87,4 +87,4 @@ v1:
         pass_condition:
           elements:
             count:
-              equal_to: 2 # 2 CRDBAccess scenarios are skipped
+              equal_to: 2 # 2 DatastoreAccess scenarios are skipped
