--- a/monitoring/uss_qualifier/configurations/interuss/pooled_dss_probing.yaml
+++ b/monitoring/uss_qualifier/configurations/interuss/pooled_dss_probing.yaml
@@ -11,7 +11,7 @@ v1:
         second_utm_auth: {$ref: './library/environment.yaml#/second_utm_auth'}
         utm_client_identity: { $ref: '../dev/library/resources.yaml#/utm_client_identity' }
         id_generator: { $ref: '../dev/library/resources.yaml#/id_generator' }
-        dss_crdb_cluster: { $ref: './library/environment.yaml#/dss_crdb_cluster' }
+        dss_datastore_cluster: { $ref: './library/environment.yaml#/dss_datastore_cluster' }
         scd_dss_instances: { $ref: './library/environment.yaml#/scd_dss_instances' }
         netrid_dss_instances_v22a: { $ref: './library/environment.yaml#/netrid_dss_instances_v22a' }
         netrid_dss_instances_v19: { $ref: './library/environment.yaml#/netrid_dss_instances_v19' }
@@ -20,7 +20,7 @@ v1:
     non_baseline_inputs:
       - v1.test_run.resources.resource_declarations.utm_auth
       - v1.test_run.resources.resource_declarations.second_utm_auth
-      - v1.test_run.resources.resource_declarations.dss_crdb_cluster
+      - v1.test_run.resources.resource_declarations.dss_datastore_cluster
       - v1.test_run.resources.resource_declarations.scd_dss_instances
       - v1.test_run.resources.resource_declarations.netrid_dss_instances_v22a
       - v1.test_run.resources.resource_declarations.netrid_dss_instances_v19
@@ -31,7 +31,7 @@ v1:
           f3411v19_dss_instances: netrid_dss_instances_v19
           f3411v22a_dss_instances: netrid_dss_instances_v22a
           f3548v21_dss_instances: scd_dss_instances
-          dss_crdb_cluster: dss_crdb_cluster
+          dss_datastore_cluster: dss_datastore_cluster
           utm_client_identity: utm_client_identity
           id_generator: id_generator
           service_area: kentland_service_area
