--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_19/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_19/dss_probing.yaml
@@ -2,7 +2,7 @@ name: DSS testing for ASTM NetRID F3411-19
 resources:
   dss: resources.astm.f3411.DSSInstanceResource
   all_dss_instances: resources.astm.f3411.DSSInstancesResource?
-  dss_crdb_cluster: resources.interuss.crdb.CockroachDBClusterResource?
+  dss_datastore_cluster: resources.interuss.datastore.DatastoreDBClusterResource?
   id_generator: resources.interuss.IDGeneratorResource
   utm_client_identity: resources.communications.ClientIdentityResource
   isa: resources.netrid.ServiceAreaResource
@@ -66,9 +66,9 @@ actions:
         id_generator: id_generator
         isa: isa
   - test_scenario:
-      scenario_type: scenarios.astm.netrid.v19.dss.CRDBAccess
+      scenario_type: scenarios.astm.netrid.v19.dss.DatastoreAccess
       resources:
-        crdb_cluster: dss_crdb_cluster
+        datastore_cluster: dss_datastore_cluster
       on_failure: Continue
   - test_scenario:
       scenario_type: scenarios.astm.netrid.v19.dss.HeavyTrafficConcurrent
