--- a/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
@@ -5,7 +5,7 @@ resources:
   observers: resources.netrid.NetRIDObserversResource
   evaluation_configuration: resources.netrid.EvaluationConfigurationResource
   dss_instances: resources.astm.f3411.DSSInstancesResource?
-  dss_crdb_cluster: resources.interuss.crdb.CockroachDBClusterResource?
+  dss_datastore_cluster: resources.interuss.datastore.DatastoreDBClusterResource?
   utm_client_identity: resources.communications.ClientIdentityResource
   id_generator: resources.interuss.IDGeneratorResource
   service_area: resources.netrid.ServiceAreaResource
@@ -23,7 +23,7 @@ actions:
       observers: observers
       evaluation_configuration: evaluation_configuration
       dss_instances: dss_instances?
-      dss_crdb_cluster: dss_crdb_cluster?
+      dss_datastore_cluster: dss_datastore_cluster?
       utm_client_identity: utm_client_identity
       id_generator: id_generator
       service_area: service_area
