--- a/monitoring/uss_qualifier/suites/uspace/required_services.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/required_services.yaml
@@ -14,7 +14,7 @@ resources:
   mock_uss_sp: resources.interuss.mock_uss.client.MockUSSResource?
   scd_dss: resources.astm.f3548.v21.DSSInstanceResource
   scd_dss_instances: resources.astm.f3548.v21.DSSInstancesResource?
-  dss_crdb_cluster: resources.interuss.crdb.CockroachDBClusterResource?
+  dss_datastore_cluster: resources.interuss.datastore.DatastoreDBClusterResource?
 
   flights_data: resources.netrid.FlightDataResource
   service_providers: resources.netrid.NetRIDServiceProviders?
@@ -57,7 +57,7 @@ actions:
       mock_uss: mock_uss
       dss: scd_dss
       dss_instances: scd_dss_instances
-      dss_crdb_cluster: dss_crdb_cluster?
+      dss_datastore_cluster: dss_datastore_cluster?
       id_generator: id_generator
       utm_auth: utm_auth?
       second_utm_auth: second_utm_auth?
@@ -75,7 +75,7 @@ actions:
       observers: observers
       evaluation_configuration: evaluation_configuration
       dss_instances: netrid_dss_instances?
-      dss_crdb_cluster: dss_crdb_cluster?
+      dss_datastore_cluster: dss_datastore_cluster?
       utm_client_identity: utm_client_identity
       id_generator: id_generator
       service_area: service_area
