--- a/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
+++ b/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
@@ -57,6 +57,7 @@ actions:
         id_generator: id_generator
         service_area: service_area
         problematically_big_area: problematically_big_area
+        planning_area: planning_area
         test_exclusions: test_exclusions?
       specification:
         action_to_repeat:
@@ -70,6 +71,7 @@ actions:
               id_generator: id_generator
               isa: service_area
               problematically_big_area: problematically_big_area
+              planning_area: planning_area
               test_exclusions: test_exclusions?
           on_failure: Continue
         dss_instances_source: dss_instances
@@ -84,6 +86,7 @@ actions:
         id_generator: id_generator
         service_area: service_area
         problematically_big_area: problematically_big_area
+        planning_area: planning_area
         test_exclusions: test_exclusions?
       specification:
         action_to_repeat:
@@ -97,6 +100,7 @@ actions:
               id_generator: id_generator
               isa: service_area
               problematically_big_area: problematically_big_area
+              planning_area: planning_area
               test_exclusions: test_exclusions?
           on_failure: Continue
         dss_instances_source: dss_instances
