[uss_qualifier] make PlanningAreaResource a non-standard-specific resource

--- a/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
@@ -195,7 +195,7 @@ v1:
         # Area that will be used for queries and resource creation that are geo-located
         planning_area:
           $content_schema: monitoring/uss_qualifier/resources/definitions/ResourceDeclaration.json
-          resource_type: resources.astm.f3548.v21.PlanningAreaResource
+          resource_type: resources.PlanningAreaResource
           specification:
             base_url: https://testdummy.interuss.org/interuss/monitoring/uss_qualifier/configurations/dev/f3548_self_contained/planning_area
             volume:
