--- a/monitoring/uss_qualifier/suites/astm/utm/prod_probe.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/prod_probe.yaml
@@ -4,7 +4,7 @@ resources:
   dss_instances: resources.astm.f3548.v21.DSSInstancesResource?
   dss_datastore_cluster: resources.interuss.datastore.DatastoreDBClusterResource?
   id_generator: resources.interuss.IDGeneratorResource
-  planning_area: resources.astm.f3548.v21.PlanningAreaResource
+  planning_area: resources.PlanningAreaResource
   test_exclusions: resources.dev.TestExclusionsResource?
   utm_client_identity: resources.communications.ClientIdentityResource
 actions:
@@ -41,7 +41,7 @@ actions:
                 all_dss_instances: resources.astm.f3548.v21.DSSInstancesResource?
                 dss_datastore_cluster: resources.interuss.datastore.DatastoreDBClusterResource?
                 id_generator: resources.interuss.IDGeneratorResource
-                planning_area: resources.astm.f3548.v21.PlanningAreaResource
+                planning_area: resources.PlanningAreaResource
                 test_exclusions: resources.dev.TestExclusionsResource?
               actions:
                 - test_scenario:
