--- a/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
+++ b/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
@@ -9,7 +9,7 @@ resources:
   id_generator: resources.interuss.IDGeneratorResource
 
   service_area: resources.netrid.ServiceAreaResource?
-  planning_area: resources.astm.f3548.v21.PlanningAreaResource?
+  planning_area: resources.PlanningAreaResource?
   problematically_big_area: resources.VerticesResource?
 
   second_utm_auth: resources.communications.AuthAdapterResource?
