--- a/schemas/monitoring/uss_qualifier/resources/planning_area/PlanningAreaSpecification.json
+++ b/schemas/monitoring/uss_qualifier/resources/planning_area/PlanningAreaSpecification.json
@@ -1,7 +1,7 @@
 {
-  "$id": "https://github.com/interuss/monitoring/blob/main/schemas/monitoring/uss_qualifier/resources/astm/f3548/v21/planning_area/PlanningAreaSpecification.json",
+  "$id": "https://github.com/interuss/monitoring/blob/main/schemas/monitoring/uss_qualifier/resources/planning_area/PlanningAreaSpecification.json",
   "$schema": "https://json-schema.org/draft/2020-12/schema",
-  "description": "Specifies an area and USS related information to create test resources that require them.\n\nmonitoring.uss_qualifier.resources.astm.f3548.v21.planning_area.PlanningAreaSpecification, as defined in monitoring/uss_qualifier/resources/astm/f3548/v21/planning_area.py",
+  "description": "Specifies a 2D or 3D volume along with USS related information to create test resources that require them.\n\nmonitoring.uss_qualifier.resources.planning_area.PlanningAreaSpecification, as defined in monitoring/uss_qualifier/resources/planning_area.py",
   "properties": {
     "$ref": {
       "description": "Path to content that replaces the $ref",
@@ -15,7 +15,7 @@
       ]
     },
     "volume": {
-      "$ref": "../../../../../../monitorlib/geo/Volume3D.json",
+      "$ref": "../../../monitorlib/geo/Volume3D.json",
       "description": "3D volume of service area"
     }
   },
