--- a/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
@@ -7,7 +7,7 @@ resources:
   dss_datastore_cluster: resources.interuss.datastore.DatastoreDBClusterResource?
   flight_intents: resources.flight_planning.FlightIntentsResource
   id_generator: resources.interuss.IDGeneratorResource
-  planning_area: resources.astm.f3548.v21.PlanningAreaResource
+  planning_area: resources.PlanningAreaResource
   problematically_big_area: resources.VerticesResource
   test_exclusions: resources.dev.TestExclusionsResource?
 actions:
