--- a/test/repo_hygiene/Dockerfile
+++ b/test/repo_hygiene/Dockerfile
@@ -2,11 +2,17 @@
 #
 # `docker build` should be run from this folder
 
-FROM python:3.8
-ADD ./requirements.txt /app/requirements.txt
-RUN pip install -r /app/requirements.txt
-RUN rm -rf __pycache__
+FROM ghcr.io/astral-sh/uv:python3.13-alpine
+
 ADD . /app
 WORKDIR /app
 
-ENTRYPOINT ["python", "repo_hygiene.py"]
+ENV UV_LINK_MODE=copy
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv sync --locked --compile-bytecode
+
+# Ensure the cache folder is present and writable by anyone
+# (Some command run with limited privileges)
+RUN mkdir -p /.cache/uv/ && chmod 777 /.cache/uv/
+
+ENTRYPOINT ["uv", "run", "repo_hygiene.py"]
