[tooling] Upgrade to python 3.13 (#1094)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "monitoring"
 version = "0.1.0"
 description = "Monitoring framework to test UAS Service Suppliers"
 readme = "README.md"
-requires-python = "==3.12.6"
+requires-python = "==3.13.5"
 dependencies = [
     "aiohttp",
     "arrow",
@@ -45,6 +45,7 @@ dependencies = [
     "shapely",
     "structlog",
     "termcolor",
+    "testcontainers",
     "uas-standards",
     "uuid6",
 ]
