[tooling] ruff: enable pyupgrade

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,9 +55,9 @@ dependencies = [
 [tool.ruff]
 target-version = "py313"
 
-# Default + isort
+# Default + isort + pyupgrade
 lint.select = [
-    "E4", "E7", "E9", "F", "I",
+    "E4", "E7", "E9", "F", "I", "UP"
 ]
 extend-exclude = ["interfaces/*"]
 line-length = 88
