--- a/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
@@ -146,3 +146,8 @@ actions:
       scenario_type: scenarios.astm.utm.dss.Report
       resources:
         dss: dss
+  - test_scenario:
+      scenario_type: scenarios.astm.utm.dss.UssAvailabilitySimple
+      resources:
+        dss: dss
+        client_identity: utm_client_identity
