--- a/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
@@ -8,7 +8,7 @@ resources:
   flight_intents: resources.flight_planning.FlightIntentsResource
   id_generator: resources.interuss.IDGeneratorResource
   planning_area: resources.PlanningAreaResource
-  problematically_big_area: resources.VerticesResource
+  problematically_big_area: resources.VolumeResource
   test_exclusions: resources.dev.TestExclusionsResource?
 actions:
   - test_scenario:
