--- a/monitoring/uss_qualifier/suites/faa/uft/message_signing.yaml
+++ b/monitoring/uss_qualifier/suites/faa/uft/message_signing.yaml
@@ -14,7 +14,7 @@ resources:
   utm_client_identity: resources.communications.ClientIdentityResource
   second_utm_auth: resources.communications.AuthAdapterResource?
   planning_area: resources.PlanningAreaResource
-  problematically_big_area: resources.VerticesResource
+  problematically_big_area: resources.VolumeResource
   test_exclusions: resources.dev.TestExclusionsResource?
 actions:
 - test_scenario:
