--- a/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
+++ b/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
@@ -10,7 +10,7 @@ resources:
 
   service_area: resources.netrid.ServiceAreaResource?
   planning_area: resources.PlanningAreaResource?
-  problematically_big_area: resources.VerticesResource?
+  problematically_big_area: resources.VolumeResource?
 
   second_utm_auth: resources.communications.AuthAdapterResource?
   flight_intents: resources.flight_planning.FlightIntentsResource?
