--- a/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
@@ -9,7 +9,7 @@ resources:
   utm_client_identity: resources.communications.ClientIdentityResource
   id_generator: resources.interuss.IDGeneratorResource
   service_area: resources.netrid.ServiceAreaResource
-  problematically_big_area: resources.VerticesResource
+  problematically_big_area: resources.VolumeResource
   planning_area: resources.PlanningAreaResource
   test_exclusions: resources.dev.TestExclusionsResource?
   mock_uss_dp: resources.interuss.mock_uss.client.MockUSSResource?
