[uspace] Update test resources to be located on U-Space FOCA soft launch site

--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -9,13 +9,13 @@ v1:
         che_invalid_flight_auth_flights: {$ref: 'library/resources.yaml#/che_invalid_flight_auth_flights'}
         che_non_conflicting_flights: {$ref: 'library/resources.yaml#/che_non_conflicting_flights'}
         che_planning_area: {$ref: 'library/resources.yaml#/che_planning_area'}
-        foca_flights_data: {$ref: 'library/resources.yaml#/foca_flights_data'}
         netrid_observation_evaluation_configuration: {$ref: 'library/resources.yaml#/netrid_observation_evaluation_configuration'}
         utm_client_identity: {$ref: 'library/resources.yaml#/utm_client_identity'}
         id_generator: {$ref: 'library/resources.yaml#/id_generator'}
-        kentland_service_area: {$ref: 'library/resources.yaml#/kentland_service_area'}
-        au_problematically_big_area: {$ref: 'library/resources.yaml#/au_problematically_big_area'}
-
+        zurich_service_area: {$ref: 'library/resources.yaml#/zurich_service_area'}
+        zurich_planning_area: {$ref: 'library/resources.yaml#/zurich_planning_area'}
+        zurich_problematically_big_area: {$ref: 'library/resources.yaml#/zurich_problematically_big_area'}
+        zurich_flights_data: {$ref: 'library/resources.yaml#/zurich_flights_data'}
         utm_auth: {$ref: 'library/environment.yaml#/utm_auth'}
         second_utm_auth: {$ref: 'library/environment.yaml#/second_utm_auth'}
         mock_uss_instances_scdsc: {$ref: 'library/environment.yaml#/mock_uss_instances_scdsc'}
@@ -67,7 +67,7 @@ v1:
           scd_dss: scd_dss
           scd_dss_instances: scd_dss_instances
 
-          flights_data: foca_flights_data
+          flights_data: zurich_flights_data
           service_providers: netrid_service_providers_v22a?
           observers: netrid_observers_v22a
           evaluation_configuration: netrid_observation_evaluation_configuration
@@ -76,9 +76,9 @@ v1:
           utm_auth: utm_auth
           second_utm_auth: second_utm_auth
           id_generator: id_generator
-          service_area: kentland_service_area
-          planning_area: che_planning_area
-          problematically_big_area: au_problematically_big_area
+          service_area: zurich_service_area
+          planning_area: zurich_planning_area
+          problematically_big_area: zurich_problematically_big_area
 
           test_exclusions: test_exclusions
           uss_identification: uss_identification
