--- a/monitoring/mock_uss/docker-compose.yaml
+++ b/monitoring/mock_uss/docker-compose.yaml
@@ -270,7 +270,7 @@ services:
       - MOCK_USS_PUBLIC_KEY=/var/test-certs/auth2.pem
       - MOCK_USS_TOKEN_AUDIENCE=scdsc.log.uss6.localutm,localhost,host.docker.internal
       - MOCK_USS_BASE_URL=http://scdsc.log.uss6.localutm
-      - MOCK_USS_SERVICES=scdsc,interaction_logging,flight_planning
+      - MOCK_USS_SERVICES=scdsc,interaction_logging,flight_planning,versioning
       - MOCK_USS_INTERACTIONS_LOG_DIR=output/scdsc_interaction_logs
       - MOCK_USS_PORT=80
       - MOCK_USS_PROXY_VALUES=x_for=1,x_proto=1,x_host=1,x_prefix=1,x_port=1
