Abstract test_membership to be environment-independent

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -154,7 +154,7 @@ jobs:
     with:
       name: uss_qualifier-utm_implementation_us-test
       script: |
-        export CONFIG_NAME="configurations.dev.utm_implementation_us.environments.local.test1"
+        export CONFIG_NAME="configurations.dev.utm_implementation_us.environments.local.test_1"
 
         cd monitoring/uss_qualifier
         make test
