[utm] Add SCD0090 checks

--- a/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
@@ -20,6 +20,7 @@ v1:
           flight_planners: flight_planners
           flight_planners_to_clear: flight_planners
           conflicting_flights: conflicting_flights
+          priority_preemption_flights: conflicting_flights
           invalid_flight_intents: invalid_flight_intents
           non_conflicting_flights: non_conflicting_flights
           dss: dss
@@ -322,6 +323,7 @@ v1:
               - astm.f3548.v21.SCD0075
               - astm.f3548.v21.SCD0080
               - astm.f3548.v21.SCD0085
+              - astm.f3548.v21.SCD0090
               - astm.f3548.v21.GEN0500
               - astm.f3548.v21.USS0105,1
               - astm.f3548.v21.USS0105,3
@@ -395,6 +397,7 @@ v1:
               - astm.f3548.v21.SCD0075
               - astm.f3548.v21.SCD0080
               - astm.f3548.v21.SCD0085
+              - astm.f3548.v21.SCD0090
               - astm.f3548.v21.GEN0500
               - astm.f3548.v21.USS0105,1
               - astm.f3548.v21.USS0105,3
