[utm] Add SCD0095 checks

--- a/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
@@ -324,6 +324,7 @@ v1:
               - astm.f3548.v21.SCD0080
               - astm.f3548.v21.SCD0085
               - astm.f3548.v21.SCD0090
+              - astm.f3548.v21.SCD0095
               - astm.f3548.v21.GEN0500
               - astm.f3548.v21.USS0105,1
               - astm.f3548.v21.USS0105,3
@@ -398,6 +399,7 @@ v1:
               - astm.f3548.v21.SCD0080
               - astm.f3548.v21.SCD0085
               - astm.f3548.v21.SCD0090
+              - astm.f3548.v21.SCD0095
               - astm.f3548.v21.GEN0500
               - astm.f3548.v21.USS0105,1
               - astm.f3548.v21.USS0105,3
