--- a/monitoring/uss_qualifier/configurations/dev/message_signing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/message_signing.yaml
@@ -6,6 +6,7 @@ v1:
         che_invalid_flight_intents: {$ref: 'library/resources.yaml#/che_invalid_flight_intents'}
         che_non_conflicting_flights: {$ref: 'library/resources.yaml#/che_non_conflicting_flights'}
         che_problematically_big_area: {$ref: 'library/resources.yaml#/che_problematically_big_area'}
+        che_planning_area_volume: {$ref: 'library/resources.yaml#/che_planning_area_volume'}
         che_planning_area: {$ref: 'library/resources.yaml#/che_planning_area'}
         combination_selector:
           resource_type: resources.flight_planning.FlightPlannerCombinationSelectorResource
