--- a/monitoring/uss_qualifier/configurations/dev/minimal_probing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/minimal_probing.yaml
@@ -3,6 +3,7 @@ v1:
   test_run:
     resources:
       resource_declarations:
+        kentland_planning_area_volume: { $ref: 'library/resources.yaml#/kentland_planning_area_volume' }
         kentland_planning_area: { $ref: 'library/resources.yaml#/kentland_planning_area' }
 
         utm_auth: { $ref: 'library/environment.yaml#/utm_auth' }
