--- a/monitoring/uss_qualifier/configurations/interuss/pooled_dss_probing.yaml
+++ b/monitoring/uss_qualifier/configurations/interuss/pooled_dss_probing.yaml
@@ -4,6 +4,7 @@ v1:
     resources:
       resource_declarations:
         kentland_service_area: { $ref: '../dev/library/resources.yaml#/kentland_service_area' }
+        kentland_planning_area_volume: { $ref: '../dev/library/resources.yaml#/kentland_planning_area_volume' }
         kentland_planning_area: { $ref: '../dev/library/resources.yaml#/kentland_planning_area' }
         kentland_problematically_big_area: { $ref: '../dev/library/resources.yaml#/kentland_problematically_big_area' }
 
