--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -8,11 +8,13 @@ v1:
         che_invalid_flight_intents: {$ref: 'library/resources.yaml#/che_invalid_flight_intents'}
         che_invalid_flight_auth_flights: {$ref: 'library/resources.yaml#/che_invalid_flight_auth_flights'}
         che_non_conflicting_flights: {$ref: 'library/resources.yaml#/che_non_conflicting_flights'}
+        che_planning_area_volume: {$ref: 'library/resources.yaml#/che_planning_area_volume'}
         che_planning_area: {$ref: 'library/resources.yaml#/che_planning_area'}
         netrid_observation_evaluation_configuration: {$ref: 'library/resources.yaml#/netrid_observation_evaluation_configuration'}
         utm_client_identity: {$ref: 'library/resources.yaml#/utm_client_identity'}
         id_generator: {$ref: 'library/resources.yaml#/id_generator'}
         zurich_service_area: {$ref: 'library/resources.yaml#/zurich_service_area'}
+        zurich_planning_area_volume: {$ref: 'library/resources.yaml#/zurich_planning_area_volume'}
         zurich_planning_area: {$ref: 'library/resources.yaml#/zurich_planning_area'}
         zurich_problematically_big_area: {$ref: 'library/resources.yaml#/zurich_problematically_big_area'}
         zurich_flights_data: {$ref: 'library/resources.yaml#/zurich_flights_data'}
