[mock_uss] Set of typing fixes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,3 +79,8 @@ exclude = [
   "monitoring/mock_uss/output/*",
   "monitoring/uss_qualifier/output/*",
 ]
+
+[dependency-groups]
+dev = [
+    "types-lxml>=2025.8.25",
+]
