--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "basedpyright>=1.31.1",
     "bc-jsonpath-ng",
     "cryptography",
+    "deprecation",
     "faker",
     "flask",
     "flask-login",
