--- a/schemas/monitoring/uss_qualifier/resources/planning_area/PlanningAreaSpecification.json
+++ b/schemas/monitoring/uss_qualifier/resources/planning_area/PlanningAreaSpecification.json
@@ -1,7 +1,7 @@
 {
   "$id": "https://github.com/interuss/monitoring/blob/main/schemas/monitoring/uss_qualifier/resources/planning_area/PlanningAreaSpecification.json",
   "$schema": "https://json-schema.org/draft/2020-12/schema",
-  "description": "monitoring.uss_qualifier.resources.planning_area.PlanningAreaSpecification, as defined in monitoring/uss_qualifier/resources/planning_area.py",
+  "description": "Specifies a 2D, 3D or 4D volume to be used in flight planning activities.\n- The base_url is directly declared in this specification\n- The volume itself is declared separately and passed as a dependency: see resource.VolumeResource for details.\n\nmonitoring.uss_qualifier.resources.planning_area.PlanningAreaSpecification, as defined in monitoring/uss_qualifier/resources/planning_area.py",
   "properties": {
     "$ref": {
       "description": "Path to content that replaces the $ref",
