[uss_qualifier] migrate service_area to new volume resource

--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -13,6 +13,7 @@ v1:
         netrid_observation_evaluation_configuration: {$ref: 'library/resources.yaml#/netrid_observation_evaluation_configuration'}
         utm_client_identity: {$ref: 'library/resources.yaml#/utm_client_identity'}
         id_generator: {$ref: 'library/resources.yaml#/id_generator'}
+        zurich_service_area_volume: {$ref: 'library/resources.yaml#/zurich_service_area_volume'}
         zurich_service_area: {$ref: 'library/resources.yaml#/zurich_service_area'}
         zurich_planning_area_volume: {$ref: 'library/resources.yaml#/zurich_planning_area_volume'}
         zurich_planning_area: {$ref: 'library/resources.yaml#/zurich_planning_area'}
