--- a/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
@@ -3,6 +3,7 @@ v1:
   test_run:
     resources:
       resource_declarations:
+        kentland_service_area_volume: { $ref: 'library/resources.yaml#/kentland_service_area_volume' }
         kentland_service_area: { $ref: 'library/resources.yaml#/kentland_service_area' }
         kentland_planning_area_volume: { $ref: 'library/resources.yaml#/kentland_planning_area_volume' }
         kentland_planning_area: { $ref: 'library/resources.yaml#/kentland_planning_area' }
