[unit tests] Remove testcontainer deprecated warnings

--- a/monitoring/uss_qualifier/pytest.ini
+++ b/monitoring/uss_qualifier/pytest.ini
@@ -1,3 +1,7 @@
 [pytest]
 addopts = -s -v
 python_files = *_test.py
+
+# Remove me when https://github.com/testcontainers/testcontainers-python/issues/874 is fixed
+filterwarnings =
+  ignore:^The @wait_container_is_ready decorator:DeprecationWarning
