--- a/monitoring/mock_uss/docker-compose.yaml
+++ b/monitoring/mock_uss/docker-compose.yaml
@@ -21,6 +21,7 @@ services:
       - MOCK_USS_INTERACTIONS_LOG_DIR=output/scdsc_a_interaction_logs
       - MOCK_USS_PORT=80
       - MOCK_USS_PROXY_VALUES=x_for=1,x_proto=1,x_host=1,x_prefix=1,x_port=1
+      - MOCK_USS_BEHAVIOUR_ACTIVATED_FLIGHTS_EDITABLE
     expose:
       - 80
     ports:
@@ -52,6 +53,7 @@ services:
       - MOCK_USS_SERVICES=scdsc,versioning,flight_planning
       - MOCK_USS_PORT=80
       - MOCK_USS_PROXY_VALUES=x_for=1,x_proto=1,x_host=1,x_prefix=1,x_port=1
+      - MOCK_USS_BEHAVIOUR_ACTIVATED_FLIGHTS_EDITABLE
     expose:
       - 80
     ports:
@@ -78,6 +80,7 @@ services:
       - MOCK_USS_SERVICES=geoawareness
       - MOCK_USS_PORT=80
       - MOCK_USS_PROXY_VALUES=x_for=1,x_proto=1,x_host=1,x_prefix=1,x_port=1
+      - MOCK_USS_BEHAVIOUR_ACTIVATED_FLIGHTS_EDITABLE
     expose:
       - 80
     ports:
@@ -109,6 +112,7 @@ services:
       - MOCK_USS_RID_VERSION=F3411-22a
       - MOCK_USS_PORT=80
       - MOCK_USS_PROXY_VALUES=x_for=1,x_proto=1,x_host=1,x_prefix=1,x_port=1
+      - MOCK_USS_BEHAVIOUR_ACTIVATED_FLIGHTS_EDITABLE
     expose:
       - 80
     ports:
@@ -141,6 +145,7 @@ services:
       - MOCK_USS_RID_VERSION=F3411-22a
       - MOCK_USS_PORT=80
       - MOCK_USS_PROXY_VALUES=x_for=1,x_proto=1,x_host=1,x_prefix=1,x_port=1
+      - MOCK_USS_BEHAVIOUR_ACTIVATED_FLIGHTS_EDITABLE
     expose:
       - 80
     ports:
@@ -173,6 +178,7 @@ services:
       - MOCK_USS_RID_VERSION=F3411-19
       - MOCK_USS_PORT=80
       - MOCK_USS_PROXY_VALUES=x_for=1,x_proto=1,x_host=1,x_prefix=1,x_port=1
+      - MOCK_USS_BEHAVIOUR_ACTIVATED_FLIGHTS_EDITABLE
     expose:
       - 80
     ports:
@@ -205,6 +211,7 @@ services:
       - MOCK_USS_RID_VERSION=F3411-19
       - MOCK_USS_PORT=80
       - MOCK_USS_PROXY_VALUES=x_for=1,x_proto=1,x_host=1,x_prefix=1,x_port=1
+      - MOCK_USS_BEHAVIOUR_ACTIVATED_FLIGHTS_EDITABLE
     expose:
       - 80
     ports:
@@ -240,6 +247,7 @@ services:
       - MOCK_USS_SERVICES=tracer
       - MOCK_USS_PORT=80
       - MOCK_USS_PROXY_VALUES=x_for=1,x_proto=1,x_host=1,x_prefix=1,x_port=1
+      - MOCK_USS_BEHAVIOUR_ACTIVATED_FLIGHTS_EDITABLE
     expose:
       - 80
     ports:
@@ -274,6 +282,7 @@ services:
       - MOCK_USS_INTERACTIONS_LOG_DIR=output/scdsc_interaction_logs
       - MOCK_USS_PORT=80
       - MOCK_USS_PROXY_VALUES=x_for=1,x_proto=1,x_host=1,x_prefix=1,x_port=1
+      - MOCK_USS_BEHAVIOUR_ACTIVATED_FLIGHTS_EDITABLE
     expose:
       - 80
     ports:
