[tooling] Exclude more dirs from docker image

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,3 +2,7 @@ build/workspace
 *.pyc
 .git
 .venv
+monitoring/uss_qualifier/output/*
+monitoring/uss_qualifier/htmlcov/*
+monitoring/mock_uss/output/*
+**/__pycache__
