feat: Add Taskfile for Airwayz RID test automation and parameterize the injection base URL in its configuration.

--- a/monitoring/uss_qualifier/configurations/personal/airwayz_rid_test.yaml
+++ b/monitoring/uss_qualifier/configurations/personal/airwayz_rid_test.yaml
@@ -30,7 +30,7 @@ v1:
           specification:
             service_providers:
               - participant_id: airwayz
-                injection_base_url: http://localhost:5000/uss/flights
+                injection_base_url: ${INTERUSS_ADAPTER_URL}/uss/flights
 
         # ID generator for test data
         id_generator:
