add the v1_base_url: http://localhost:5000/interuss to the config file

--- a/monitoring/uss_qualifier/configurations/personal/airwayz_rid_test.yaml
+++ b/monitoring/uss_qualifier/configurations/personal/airwayz_rid_test.yaml
@@ -46,8 +46,8 @@ v1:
             flight_planners:
               - participant_id: my_service_under_test
                 # URL to point to your service
-                # v1_base_url: http://host.docker.internal:5000
-                v1_base_url: http://localhost:5000
+                v1_base_url: http://localhost:5000/interuss
+                # v1_base_url: http://localhost:5000
                 timeout_seconds: 30
 
         # Means by which to obtain the versions of participants' systems under test
