feat: Add Airwayz-specific USS Qualifier configuration and quick check test suite.

--- a/monitoring/uss_qualifier/configurations/personal/airwayz_rid_test.yaml
+++ b/monitoring/uss_qualifier/configurations/personal/airwayz_rid_test.yaml
@@ -46,8 +46,8 @@ v1:
             flight_planners:
               - participant_id: my_service_under_test
                 # URL to point to your service
-                v1_base_url: http://localhost:5000/interuss
-                # v1_base_url: http://localhost:5000
+                # v1_base_url: https://dev.airwayz-utm.co/interuss
+                v1_base_url: http://localhost:5000
                 timeout_seconds: 30
 
         # Means by which to obtain the versions of participants' systems under test
@@ -56,7 +56,11 @@ v1:
           dependencies:
             auth_adapter: utm_auth
           specification:
-            instances: []
+            instances:
+              - participant_id: my_service_under_test
+                interuss:
+                  # base_url: https://dev.airwayz-utm.co/interuss
+                  base_url: http://localhost:5000
 
         # Means by which to obtain the versions of participants' production systems
         prod_env_version_providers:
@@ -64,7 +68,11 @@ v1:
           dependencies:
             auth_adapter: utm_auth
           specification:
-            instances: []
+            instances:
+              - participant_id: my_service_under_test
+                interuss:
+                  # base_url: https://dev.airwayz-utm.co/interuss
+                  base_url: http://localhost:5000
 
         # 4. Define the DSS (Decision Support Service)
         # You normally need a DSS to test against. You can use a local mock or a real one.
