[uss_qualifier/reports] Add timing report

--- a/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
@@ -428,6 +428,10 @@ v1:
     # Write out a long-form report mimicking if the test run was performed manually
     globally_expanded_report: {}
 
+    # Write out a report describing where and how time was spent during the test
+    timing_report:
+      percentage_of_time_to_break_down: 90
+
   # This block defines whether to return an error code from the execution of uss_qualifier, based on the content of the
   # test run report.  All of the criteria must be met to return a successful code.
   validation:
