--- a/monitoring/uss_qualifier/configurations/dev/netrid_v22a.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/netrid_v22a.yaml
@@ -66,6 +66,7 @@ v1:
           uss1: sp_dp_dss
           uss2: sp_dss
     sequence_view: {}
+    timing_report: {}
   validation:
     criteria:
       - $ref: ./library/validation.yaml#/execution_error_none
