--- a/monitoring/uss_qualifier/configurations/dev/noop.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/noop.yaml
@@ -28,5 +28,6 @@ v1:
       indent: 2
     sequence_view: {}
     report_html: {}
+    timing_report: {}
   validation:
     $ref: ./library/validation.yaml#/normal_test
