--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -179,6 +179,8 @@ v1:
           uss1: uspace
           uss2: uspace
     sequence_view: {}
+    timing_report:
+      percentage_of_time_to_break_down: 90
   validation:
     criteria:
       - $ref: ./library/validation.yaml#/execution_error_none
