--- a/schemas/monitoring/uss_qualifier/configurations/configuration/ArtifactsConfiguration.json
+++ b/schemas/monitoring/uss_qualifier/configurations/configuration/ArtifactsConfiguration.json
@@ -70,6 +70,17 @@
         "array",
         "null"
       ]
+    },
+    "timing_report": {
+      "description": "If specified, configuration describing a desired report describing where and how time was spent during the test.",
+      "oneOf": [
+        {
+          "type": "null"
+        },
+        {
+          "$ref": "TimingReportConfiguration.json"
+        }
+      ]
     }
   },
   "type": "object"
